@@ -1,3 +1,7 @@
+2006-02-14  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add some links for NetworkManager icons
+
 2006-02-07  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.6.8 for release
